--- a/app/src/main/res/layout/fragment_exhibit_detail_view.xml
+++ b/app/src/main/res/layout/fragment_exhibit_detail_view.xml
@@ -2,7 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:paddingBottom="60dp"
     tools:context=".ExhibitDetailViewFragment">
@@ -24,6 +24,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="6dp">
+            <ImageView
+                android:id="@+id/button_back"
+                android:layout_width="60dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_baseline_arrow_back" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal"
             android:padding="12dp">
 
@@ -86,8 +99,10 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:scrollHorizontally="false"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            android:text="@string/large_text" />
+            android:layout_marginHorizontal="10dp"
+            android:text="@string/placeholder_text" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
